--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -18,6 +18,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips"
         android:ems="10"
+        android:textColor="@color/colorAccent"
         android:hint="   Name"
         android:inputType="textPersonName"
         android:textColorHint="@color/colorAccent"
@@ -71,6 +72,7 @@
         android:background="@drawable/elips"
         android:ems="10"
         android:hint="   Password"
+        android:textColor="@color/colorAccent"
         android:inputType="textPassword"
         android:textColorHint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
