--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_4.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_4.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/algos2"
     android:layout_height="match_parent"
-    android:background="@drawable/algos1"
-    tools:context=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_7">
+    tools:context=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_4">
 
     <TextView
-        android:id="@+id/textView64"
+        android:id="@+id/textView70"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -17,16 +17,16 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(ben bir efsaneyim)"
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView65"
+        android:text="Parametrenin,kelimenin kaç harften oluştuğunu öğrenmek için boy() fonksiyonunu kullanıyoruz."
+        app:layout_constraintBottom_toTopOf="@+id/textView71"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView65"
+        android:id="@+id/textView71"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -35,54 +35,34 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çalıştığında ekranda ne gösterecektir ? "
+        android:text="Örnek Kod"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/edCevapAlgo1_7"
+        app:layout_constraintBottom_toTopOf="@+id/textView72"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView64" />
+        app:layout_constraintTop_toBottomOf="@+id/textView70" />
 
-    <EditText
-        android:id="@+id/edCevapAlgo1_7"
+    <TextView
+        android:id="@+id/textView72"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:ems="10"
-        android:hint="  Yazmaya başla"
         android:background="@drawable/elips"
-        android:textColorHint="#ffffff"
-
+        android:gravity="center|center_horizontal|center_vertical"
+        android:text="Goster(boy())"
         android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo1_7"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo2_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView65" />
+        app:layout_constraintTop_toBottomOf="@+id/textView71" />
 
     <Button
-        android:id="@+id/btnCalistirAlgo1_7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/elips_button"
-        android:onClick="calistirAlgo1_7"
-        android:text="ÇALIŞTIR"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo1_7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edCevapAlgo1_7" />
-
-    <Button
-        android:id="@+id/btnDevamAlgo1_7"
+        android:id="@+id/btnDevamAlgo2_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -91,11 +71,11 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
         android:textColor="@color/colorPrimary"
-        android:onClick="devamAlgo1_7"
+        android:onClick="devamAlgo2_4"
         android:text="DEVAM"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistirAlgo1_7" />
+        app:layout_constraintTop_toBottomOf="@+id/textView72" />
 </androidx.constraintlayout.widget.ConstraintLayout>
