--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button2_5.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button2_5.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/algos1"
-    tools:context=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_7">
+    android:background="@drawable/algos2"
+    tools:context=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_5">
 
     <TextView
-        android:id="@+id/textView64"
+        android:id="@+id/textView73"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -17,16 +17,16 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(ben bir efsaneyim)"
+        android:text="boy() parametrenin kaç harften oluştuğunu bize söyler.Ekrana 4 yazdıracak."
         android:textColor="@color/colorAccent"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView65"
+        app:layout_constraintBottom_toTopOf="@+id/textView74"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView65"
+        android:id="@+id/textView74"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -35,37 +35,33 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çalıştığında ekranda ne gösterecektir ? "
+        android:text="Goster(boy(atam))"
         android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/edCevapAlgo1_7"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvCevapAlgo2_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView64" />
+        app:layout_constraintTop_toBottomOf="@+id/textView73" />
 
-    <EditText
-        android:id="@+id/edCevapAlgo1_7"
+    <TextView
+        android:id="@+id/tvCevapAlgo2_5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:ems="10"
-        android:hint="  Yazmaya başla"
         android:background="@drawable/elips"
-        android:textColorHint="#ffffff"
-
+        android:gravity="center|center_horizontal|center_vertical"
         android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo1_7"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo2_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView65" />
+        app:layout_constraintTop_toBottomOf="@+id/textView74" />
 
     <Button
-        android:id="@+id/btnCalistirAlgo1_7"
+        android:id="@+id/btnCalistirAlgo2_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -73,16 +69,17 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
-        android:onClick="calistirAlgo1_7"
-        android:text="ÇALIŞTIR"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo1_7"
+        android:onClick="calistirAlgo2_5"
+        android:text="ÇALIŞTIR"
+
+        app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo2_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edCevapAlgo1_7" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCevapAlgo2_5" />
 
     <Button
-        android:id="@+id/btnDevamAlgo1_7"
+        android:id="@+id/btnDevamAlgo2_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -90,12 +87,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
-        android:textColor="@color/colorPrimary"
-        android:onClick="devamAlgo1_7"
+        android:onClick="devamAlgo2_5"
         android:text="DEVAM"
-
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistirAlgo1_7" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCalistirAlgo2_5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
