--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button3_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button3_3.xml
@@ -3,30 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/algos3"
     android:layout_height="match_parent"
-    android:background="@drawable/algos1"
-    tools:context=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_7">
+    tools:context=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_3">
+
+    <Button
+        android:id="@+id/btnDevamAlgo3_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
+        android:onClick="devamAlgo3_3"
+        android:text="DEVAM"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCalistirAlgo3_3" />
 
     <TextView
-        android:id="@+id/textView64"
+        android:id="@+id/textView82"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Goster(ben bir efsaneyim)"
+        android:text="lakap = Efsane \n Goster(Efsane)"
         android:textColor="@color/colorAccent"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView65"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView83"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView65"
+        android:id="@+id/textView83"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -35,16 +53,16 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Kod çalıştığında ekranda ne gösterecektir ? "
+        android:text="Kod çaılştığında ekranda ne gösterilecektir ? "
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/edCevapAlgo1_7"
+        app:layout_constraintBottom_toTopOf="@+id/edCevapAlgo3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView64" />
+        app:layout_constraintTop_toBottomOf="@+id/textView82" />
 
     <EditText
-        android:id="@+id/edCevapAlgo1_7"
+        android:id="@+id/edCevapAlgo3_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -52,50 +70,32 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/colorAccent"
         android:hint="  Yazmaya başla"
         android:background="@drawable/elips"
-        android:textColorHint="#ffffff"
-
         android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo1_7"
+
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView65" />
+        app:layout_constraintTop_toBottomOf="@+id/textView83" />
 
     <Button
-        android:id="@+id/btnCalistirAlgo1_7"
+        android:id="@+id/btnCalistirAlgo3_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/elips_button"
-        android:onClick="calistirAlgo1_7"
+        android:onClick="calistirAlgo3_3"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo1_7"
+        app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edCevapAlgo1_7" />
-
-    <Button
-        android:id="@+id/btnDevamAlgo1_7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/elips_button"
-        android:textColor="@color/colorPrimary"
-        android:onClick="devamAlgo1_7"
-        android:text="DEVAM"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalistirAlgo1_7" />
+        app:layout_constraintTop_toBottomOf="@+id/edCevapAlgo3_3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
